--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "sass": "^1.93.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.3",
