Se agrega nuevo vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "dist/directorio/browser/**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/directorio/browser/$1"
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
