--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build --prod",
     "build:prod": "ng build --configuration production --base-href /",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "vercel-build": "ng build --configuration production --base-href /"
   },
   "private": true,
   "dependencies": {
